--- a/addons/mail/views/mail_blacklist_views.xml
+++ b/addons/mail/views/mail_blacklist_views.xml
@@ -16,19 +16,28 @@
         <field name="model">mail.blacklist</field>
         <field name="arch" type="xml">
             <form string="Add Email Blacklist" duplicate="false">
-                <header>
-                    <button name="mail_action_blacklist_remove" string="Unblacklist"
-                        type="object" class="oe_highlight" context="{'default_email': email}"
-                        invisible="not active or not email"/>
-                    <button name="action_add" string="Blacklist"
-                        type="object" class="oe_highlight"
-                        invisible="active or not email"/>
-                </header>
                 <sheet>
                     <div class="badge rounded-pill text-bg-danger float-end fs-6 border-0" invisible="active">Archived</div>
-                    <group>
-                        <field name="email"/>
-                    </group>
+                    <div>
+                        <group string="Definition" class="rounded border mb-4 i__group">
+                            <field name="email"/>
+                        </group>
+                    </div>
+                    <sidepanel>
+                        <div class="o_inner_group border rounded mb-4 i__group" name="quick_actions">
+                            <div class="o_horizontal_separator mt-4 mb-3 text-uppercase fw-bolder small">
+                                Quick Actions
+                            </div>
+                            <div class="action_button o-form-buttonbox list-group gap-2">
+                                <button name="mail_action_blacklist_remove" string="Unblacklist"
+                                    type="object" class="oe_highlight" context="{'default_email': email}"
+                                    invisible="not active or not email"/>
+                                <button name="action_add" string="Blacklist"
+                                    type="object" class="oe_highlight"
+                                    invisible="active or not email"/>
+                            </div>
+                        </div>
+                    </sidepanel>
                 </sheet>
                 <chatter/>
             </form>
