--- a/addons/mail/views/mail_link_preview_views.xml
+++ b/addons/mail/views/mail_link_preview_views.xml
@@ -7,23 +7,27 @@
         <field name="arch" type="xml">
             <form string="Link Previews">
                 <sheet>
-                    <group>
+                    <group string="Definition" class="border rounded mb-4 mx-0 i__group">
                         <group>
                             <field name="source_url"/>
                             <field name="og_type"/>
                             <field name="og_title"/>
                         </group>
                         <group>
-                            <field name="og_image"/>
-                            <field name="og_image" nolabel="1" widget="image_url" options="{'size': [150, 150]}" />
+                            <label for="og_image"/>
+                            <div class="d-flex">
+                                <field name="og_image" nolabel="1" widget="image_url" class="w-25" options="{'size': [72, 72]}"/>
+                                <field name="og_image"/>
+                            </div>
                             <field name="og_mimetype"/>
                             <field name="image_mimetype"/>
                             <field name="create_date"/>
                         </group>
+                        <group colspan="2" class="my-3">
+                            <field name="og_description"/>
+                        </group>
+                        <field colspan="2" name="message_link_preview_ids"/>
                     </group>
-                    <label for="og_description"/>
-                    <field name="og_description"/>
-                    <field name="message_link_preview_ids"/>
                 </sheet>
             </form>
         </field>
