--- a/addons/mail/views/mail_menus.xml
+++ b/addons/mail/views/mail_menus.xml
@@ -57,101 +57,101 @@
         sequence="25"
     />
 
-    <record id="base.menu_email" model="ir.ui.menu">
+    <!-- === System Menu Setup === -->
+    <!-- <record id="base.menu_email" model="ir.ui.menu">
         <field name="sequence">3</field>
-    </record>
-
+    </record> -->
     <!-- Under Technical/Email -->
-    <menuitem name="Emails"
+    <!-- <menuitem name="Emails"
         id="menu_mail_mail"
         parent="base.menu_email"
         action="action_view_mail_mail"
-        sequence="1"/>
-    <menuitem id="mail_alias_menu"
+        sequence="1"/> -->
+    <!-- <menuitem id="mail_alias_menu"
         parent="base.menu_email"
         action="mail_alias_action"
         sequence="11"
-        groups="base.group_no_one"/>
-    <menuitem id="mail_alias_domain_menu"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem id="mail_alias_domain_menu"
         parent="base.menu_email"
         action="mail_alias_domain_action"
         sequence="12"
-        groups="base.group_no_one"/>
-    <menuitem name="Incoming Mail Servers"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem name="Incoming Mail Servers"
         id="menu_action_fetchmail_server_tree"
         parent="base.menu_email"
         action="action_email_server_tree"
         sequence="6"
-        groups="base.group_no_one"/>
-    <menuitem id="menu_email_templates"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem id="menu_email_templates"
         parent="base.menu_email"
         action="action_email_template_tree_all"
-        sequence="10"/>
-    <menuitem id="mail.discuss_channel_menu_settings"
+        sequence="10"/> -->
+    <!-- <menuitem id="mail.discuss_channel_menu_settings"
         name="Channels"
         parent="base.menu_email"
         action="mail.discuss_channel_action_view"
         sequence="20"
-        groups="base.group_no_one"/>
-    <menuitem name="Channels/Members"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem name="Channels/Members"
         id="mail.discuss_channel_member_menu"
         parent="base.menu_email"
         action="mail.discuss_channel_member_action"
         sequence="21"
-        groups="base.group_no_one"/>
-    <menuitem id="mail_gateway_allowed_menu"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem id="mail_gateway_allowed_menu"
         parent="base.menu_email"
         action="mail_gateway_allowed_action"
         sequence="22"
-        groups="base.group_no_one"/>
+        groups="base.group_no_one"/> -->
 
     <!-- Under Technical/Discuss -->
-    <menuitem name="Talks"
+    <!-- <menuitem name="Talks"
         id="mail_menu_technical"
         parent="base.menu_administration"
         groups="base.group_no_one"
-        sequence="1"/>
+        sequence="1"/> -->
 
-    <menuitem name="Messages"
+    <!-- <menuitem name="Messages"
         id="menu_mail_message"
         parent="mail.mail_menu_technical"
         action="action_view_mail_message"
-        sequence="1"/>
-    <menuitem name="Scheduled Messages"
+        sequence="1"/> -->
+    <!-- <menuitem name="Scheduled Messages"
         id="mail_message_schedule_menu"
         parent="mail.mail_menu_technical"
         action="mail_message_schedule_action"
-        sequence="2"/>
-    <menuitem name="Subtypes"
+        sequence="2"/> -->
+    <!-- <menuitem name="Subtypes"
         id="menu_message_subtype"
         parent="mail.mail_menu_technical"
         action="action_view_message_subtype"
-        sequence="4"/>
-    <menuitem name="Tracking Values"
+        sequence="4"/> -->
+    <!-- <menuitem name="Tracking Values"
         id="menu_mail_tracking_value"
         parent="mail.mail_menu_technical"
         action="action_view_mail_tracking_value"
-        sequence="5"/>
+        sequence="5"/> -->
 
-    <menuitem name="Notifications"
+    <!-- <menuitem name="Notifications"
         id="mail_notification_menu"
         parent="mail.mail_menu_technical"
         action="mail_notification_action"
         sequence="20"
-        groups="base.group_no_one"/>
-    <menuitem name="Followers"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem name="Followers"
         id="menu_email_followers"
         parent="mail.mail_menu_technical"
         action="action_view_followers"
         sequence="21"
-        groups="base.group_no_one"/>
-    <menuitem id="mail_blacklist_menu"
+        groups="base.group_no_one"/> -->
+    <!-- <menuitem id="mail_blacklist_menu"
         name="Email Blacklist"
         action="mail_blacklist_action"
         parent="mail.mail_menu_technical"
-        sequence="22"/>
+        sequence="22"/> -->
 
-    <menuitem id="res_users_settings_menu"
+    <!-- <menuitem id="res_users_settings_menu"
         name="User Settings"
         action="res_users_settings_action"
         parent="mail.mail_menu_technical"
@@ -185,28 +185,28 @@
         name="GIF favorite"
         action="discuss_gif_favorite_action"
         parent="mail.mail_menu_technical"
-        sequence="56"/>
+        sequence="56"/> -->
 
-    <menuitem name="Activities"
+    <!-- <menuitem name="Activities"
         id="menu_mail_activities_section"
         parent="base.menu_administration"
         groups="base.group_no_one"
-        sequence="2" />
-    <menuitem
+        sequence="2" /> -->
+    <!-- <menuitem
       id="menu_mail_activities"
       action="mail_activity_action"
       parent="mail.menu_mail_activities_section"
-      sequence="10"/>
-    <menuitem
+      sequence="10"/> -->
+    <!-- <menuitem
       id="menu_mail_activity_type"
       action="mail_activity_type_action"
       parent="mail.menu_mail_activities_section"
-      sequence="20"/>
-    <menuitem
+      sequence="20"/> -->
+    <!-- <menuitem
         id="menu_mail_activity_plan"
         action="mail_activity_plan_action"
         parent="mail.menu_mail_activities_section"
-        sequence="30"/>
+        sequence="30"/> -->
 
     <!--
         This menuitem will be activated by integrations modules (like github, twitter, ...). It
