--- a/addons/mail/views/res_role_views.xml
+++ b/addons/mail/views/res_role_views.xml
@@ -31,9 +31,11 @@
             <field name="arch" type="xml">
                 <form string="Role">
                     <sheet>
-                        <group string="Definition" class="i__group border rounded mb-4">
-                            <field name="name" string="Role"/>
-                            <field name="user_ids" widget="many2many_avatar_user" options="{'no_create': True}"/>
+                        <group string="Definition" class="i__group border mx-0 rounded mb-4">
+                            <group colspan="2">
+                                <field name="name" string="Role"/>
+                                <field name="user_ids" widget="many2many_avatar_user" options="{'no_create': True}"/>
+                            </group>
                         </group>
                     </sheet>
                 </form>
