--- a/inphms/addons/base/views/ir_asset_views.xml
+++ b/inphms/addons/base/views/ir_asset_views.xml
@@ -72,5 +72,5 @@
         <field name="context">{'search_default_active': 1}</field>
     </record>
 
-    <menuitem action="action_asset" id="menu_action_asset" parent="base.next_id_9"/>
+    <!-- <menuitem action="action_asset" id="menu_action_asset" parent="base.next_id_9"/> -->
 </inphms>
