--- a/inphms/addons/base/views/ir_config_parameter_views.xml
+++ b/inphms/addons/base/views/ir_config_parameter_views.xml
@@ -36,5 +36,5 @@
             <field name="res_model">ir.config_parameter</field>
             <field name="path">system-parameters</field>
         </record>
-        <menuitem id="ir_config_menu" name="System Parameters" parent="menu_ir_property" action="ir_config_list_action"/>
+        <!-- <menuitem id="ir_config_menu" name="System Parameters" parent="menu_ir_property" action="ir_config_list_action"/> -->
 </inphms>
