--- a/inphms/addons/base/views/ir_cron_trigger_views.xml
+++ b/inphms/addons/base/views/ir_cron_trigger_views.xml
@@ -43,9 +43,9 @@
         <field name="view_mode">list,form</field>
     </record>
 
-    <menuitem id="ir_cron_trigger_menu"
+    <!-- <menuitem id="ir_cron_trigger_menu"
         action="ir_cron_trigger_action"
         parent="base.menu_automation"
-        sequence="3"/>
+        sequence="3"/> -->
 
 </inphms>
