--- a/inphms/addons/base/views/ir_cron_views.xml
+++ b/inphms/addons/base/views/ir_cron_views.xml
@@ -98,9 +98,9 @@
             <field name="view_id" ref="ir_cron_view_tree"/>
         </record>
 
-        <menuitem id="menu_ir_cron_act"
+        <!-- <menuitem id="menu_ir_cron_act"
             parent="base.menu_automation"
             action="ir_cron_act"
-            sequence="2"/>
+            sequence="2"/> -->
 
 </inphms>
