--- a/inphms/addons/base/views/ir_default_views.xml
+++ b/inphms/addons/base/views/ir_default_views.xml
@@ -70,6 +70,6 @@
         <field name="view_mode">list,form</field>
         <field name="search_view_id" ref="ir_default_search_view"/>
     </record>
-    <menuitem action="ir_default_menu_action" id="ir_default_menu" parent="next_id_6"/>
+    <!-- <menuitem action="ir_default_menu_action" id="ir_default_menu" parent="next_id_6"/> -->
 
 </inphms>
