--- a/inphms/addons/base/views/ir_logging_views.xml
+++ b/inphms/addons/base/views/ir_logging_views.xml
@@ -81,5 +81,5 @@
             <field name="view_mode">list,form</field>
             <field name="search_view_id" ref="ir_logging_search_view" />
         </record>
-        <menuitem parent="base.next_id_9" id="ir_logging_all_menu" action="ir_logging_all_act" />
+        <!-- <menuitem parent="base.next_id_9" id="ir_logging_all_menu" action="ir_logging_all_act" /> -->
 </inphms>
