--- a/inphms/addons/base/views/ir_profile_views.xml
+++ b/inphms/addons/base/views/ir_profile_views.xml
@@ -102,10 +102,10 @@
         <field name="context">{'search_default_group_session': 1}</field>
     </record>
 
-    <menuitem
+    <!-- <menuitem
         name="Profiling"
         action="action_menu_ir_profile"
         id="menu_ir_profile"
-        parent="base.next_id_9"/>
+        parent="base.next_id_9"/> -->
 
 </inphms>
